# TonalityReasoner_QT

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  reasoner_gui.cpp  reasoner_gui.h
